Fixed text size issue on mobile devices
A style design on mobile devices cause long text in headers to overlap and looked bad.  Added a catch for mobile devices to change the line-height to 32px on displays under 1000px, making text show properly.

--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,10 @@ header .intro-text {
 
 
 @media (max-width: 1000px) {
+	h2 {
+		line-height: 32px;
+	}
+	
     .navbar-header {
         float: none;
     }
